EDIT : 20250120 박수현 유저 목록 불러오기 완료

--- a/src/main/webapp/asset/css/admin/adminMenuLayOut.css
+++ b/src/main/webapp/asset/css/admin/adminMenuLayOut.css
@@ -218,6 +218,12 @@ li { list-style-type: none; }
   text-overflow: ellipsis;
 }
 
+/* 데이터가 없는 경우 */
+.data-none {
+	height: 300px;
+	line-height: 300px;	
+}
+
 /* 모든 데이터 중 회색 글씨 */
 .lightdata {
   color: #808080;
