EDIT : 20250122 박수현 관리자 작업 중 - 공지는 수정만 남음

--- a/src/main/webapp/asset/css/admin/admin-bannerlist.css
+++ b/src/main/webapp/asset/css/admin/admin-bannerlist.css
@@ -5,7 +5,7 @@
   padding: 0 5px;
 }
 .adminBanner-li-bannerwritedate { width: 20%; }
-li.adminBanner-li-bannerbtncontainer {
+.admin-ul-datawrap li.adminBanner-li-bannerbtncontainer {
   position: relative;
   overflow: visible;
   display: flex;
