EDIT : 20250122 오현택 CRUD 기본기능 완료

--- a/src/main/webapp/asset/css/study/studylist.css
+++ b/src/main/webapp/asset/css/study/studylist.css
@@ -168,6 +168,7 @@ button {
 /*스터디의 마감일과 모집상태  */
 .studylist-div-enddate,
 .studylist-div-groupstatus {
+  list-style-type: none;
   color: #808080;
 }
 
