--- a/src/main/webapp/asset/css/study/studylist-edit.css
+++ b/src/main/webapp/asset/css/study/studylist-edit.css
@@ -119,6 +119,8 @@ main {
   border: 1px solid #ccc;
 }
 
+
+
 /*라벨 */
 .label {
   width: 200px;
@@ -211,6 +213,33 @@ main {
 
 textarea:focus {
   outline: none;
+}
+
+.studylist-div-btnwrapper{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+}
+.studylist-btn-submit{
+  width: 100px;
+  height: 50px;
+  background-color: #003161;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+/* 취소 버튼 스타일 */
+.studylist-btn-cancel{
+  width: 100px;
+  height: 50px;
+  border: 1px solid #808080;
+  background-color: white;
+  color: #003161;
+  border-radius: 10px;
+  margin-left: 10px;
 }
 
 /* footer */
