--- a/src/main/webapp/asset/css/login/join.css
+++ b/src/main/webapp/asset/css/login/join.css
@@ -20,6 +20,9 @@ body {
  
 }
 
+nav { width : 100%; }
+nav>img { margin-left: 20px; }
+
 main{
   background-color: white;
   border: 1px solid lightgray;
