--- a/src/main/webapp/asset/css/login/passwordSelect-detail.css
+++ b/src/main/webapp/asset/css/login/passwordSelect-detail.css
@@ -19,7 +19,7 @@ main{
   display: flex;
   flex-direction: column;
   border: 1px solid lightgray;
-  height: 40vh;
+  padding: 50px 0;
   border-radius: 30px;
   width: 600px;
   margin : 60px auto  ;
