--- a/src/main/webapp/asset/css/main/main.css
+++ b/src/main/webapp/asset/css/main/main.css
@@ -21,6 +21,7 @@ body {
 /* 위시리스트 */
 .main-div-wish {
 	cursor: pointer;
+    padding: 1vh 0;
 }
 
 .main-div-wrapper {
@@ -68,14 +69,18 @@ body {
 	flex-direction: column;
 	align-items: center;
 	font-weight: bold;
-	font-size: 40px;
+	/* font-size: 40px; */
+    font-size: 4vh;
 	line-height: 1;
 }
+
+.main-div-wishlisttitle>h2:first-child { margin-bottom: 2vh; }
 
 .main-div-ulist {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+    margin-top: 2%;
 }
 
 .main-div-studysection {
