EDIT 20250205 황어진 마이페이지 수정중

--- a/src/main/webapp/asset/css/mypage/mypage-hostboard.css
+++ b/src/main/webapp/asset/css/mypage/mypage-hostboard.css
@@ -408,8 +408,12 @@ a{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   overflow: scroll;
-}
+  -ms-overflow-style: none;
 
+}
+.modal-content::-webkit-scrollbar{
+  display:none;
+}
 .hidden {
   display: none;
 }
