허준혁 board 수정 및 추가

--- a/src/main/webapp/asset/css/board/boardlist.css
+++ b/src/main/webapp/asset/css/board/boardlist.css
@@ -151,6 +151,7 @@ button {
   cursor: pointer;
 }
 /* ------------------------------------------------------ */
+.boardlist-ul-list { min-height: 300px; }
 
 /* --------------------페이지 네이션---------------------- */
   .boardlist-div-paginationwrapper{
