--- a/src/main/webapp/asset/css/admin/admin-detail.css
+++ b/src/main/webapp/asset/css/admin/admin-detail.css
@@ -66,7 +66,7 @@
 .btn-update {
   background-color: #fff;
   color: #003161;
-  border: none;
+  border: 1px solid #ccc;
 }
 
 /* 공지 - 본문 칸 스타일 별도 설정 */
