--- a/src/main/webapp/asset/css/mypage/mypage-writtenboard.css
+++ b/src/main/webapp/asset/css/mypage/mypage-writtenboard.css
@@ -12,7 +12,7 @@ body {
   /* font-weight: 500; */
 }
 
-.board-div-list{
+.board-div-list {
   margin: 10px;
 }
 
@@ -36,7 +36,9 @@ aside {
 }
 
 /*사이드 테이블 제목*/
-#MYPAGE-H2-TITLE { margin-bottom: 40px; }
+#MYPAGE-H2-TITLE {
+  margin-bottom: 40px;
+}
 
 /* 상단 헤더 - 로고, 홈, 로그아웃 */
 #ADMIN-DIV-HEADERCONTAINER {
@@ -50,7 +52,7 @@ aside {
   /* margin-left: 210px; */
 }
 
-.admin-img-logo{
+.admin-img-logo {
   margin-left: 210px;
 }
 
@@ -75,7 +77,9 @@ aside {
   font-weight: 700;
 }
 
-#ADMIN-UL-HEADERWRAP li:nth-child(1) { border-right: 1px solid #003161; }
+#ADMIN-UL-HEADERWRAP li:nth-child(1) {
+  border-right: 1px solid #003161;
+}
 
 
 
@@ -97,7 +101,7 @@ aside {
 .mypage-h1-maintitle {
   align-self: flex-start;
   margin-top: 30px;
- 
+
 }
 
 /* 게시판 컨텐츠 정렬을 위한 div */
@@ -131,20 +135,25 @@ aside {
   background-color: #0b2d52;
   color: white;
 }
-.mypage-ul-menuwrap li:hover > a{
+
+.mypage-ul-menuwrap li:hover>a {
   color: white;
 }
 
 /* 메뉴 클릭했을 때 */
-.mypage-li-menuactive{
+.mypage-li-menuactive {
   background-color: #fff;
 }
-.mypage-li-menuactive>a{
+
+.mypage-li-menuactive>a {
   color: #003161;
 }
-li { list-style-type: none; }
 
-a{
+li {
+  list-style-type: none;
+}
+
+a {
   color: white;
   text-decoration: none;
 }
@@ -182,7 +191,8 @@ a{
 }
 
 .board-title {
-  flex: 2; /* 제목은 더 넓게 */
+  flex: 2;
+  /* 제목은 더 넓게 */
 }
 
 .board-title a {
@@ -194,7 +204,7 @@ a{
 }
 
 /* 컨텐츠 1개에 대한 css */
-.jimboard-div-wrap{
+.jimboard-div-wrap {
   border: 1px solid black;
   width: 400px;
   height: 300px;
@@ -202,30 +212,36 @@ a{
   display: flex;
   /* padding: 50px; */
 }
-.section{
+
+.section {
   width: 100%;
   padding: 20px;
 }
-.enddateandstatus{
+
+.enddateandstatus {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
 }
-.enddateandstatus > .enddate{
+
+.enddateandstatus>.enddate {
   /* margin-right: 150px; */
 }
-.title{
+
+.title {
   margin: 20px 0;
   height: 130px;
   font-weight: bold;
 }
-.categoryandpeople{
+
+.categoryandpeople {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
   border-bottom: 1px solid #ddd;
 }
-.nameandjim{
+
+.nameandjim {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
@@ -234,35 +250,40 @@ a{
 
 /*페이지네이션*/
 
-.mypage-div-paginationwrapper{
+.mypage-div-paginationwrapper {
   width: 100%;
-  margin : 50px 0;
+  margin: 50px 0;
 }
 
 
 
-#mypage-UL-PAGINATION{
+#mypage-UL-PAGINATION {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top : 50px;
+  margin-top: 50px;
 }
 
 /*페이지네이션 리스트*/
-.mypage-li-paginationlist{
+.mypage-li-paginationlist {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 50px;
-  height : 50px;
+  height: 50px;
   text-align: center;
   border-radius: 100px;
-  margin : 0 5px;
-  cursor : pointer;
+  margin: 0 5px;
+  cursor: pointer;
   list-style-type: none;
 }
 
-.currentpage{
+.currentpage {
   background: #003161;
   color: white;
+}
+
+.mypage-li-paginationlist:hover:not(.pre, .next) {
+
+  border: 3px solid #003161;
 }
