EDIT 20250207 황어진 로그인 파트 소스 임시 병합

--- a/src/main/webapp/asset/css/login/passwordSelect.css
+++ b/src/main/webapp/asset/css/login/passwordSelect.css
@@ -81,3 +81,12 @@ main{
   color: white;
 }
 
+.passwordSelect-btn1{
+  height: 40px;
+  margin-left: 270px;
+  width: 100px;
+  border-radius: 10px;
+  border: none;
+  background-color: #003161;
+  color: white;
+}
