EDIT 20250207 오현택 : 파일첨부 완료

--- a/src/main/webapp/asset/css/study/studylist-detail.css
+++ b/src/main/webapp/asset/css/study/studylist-detail.css
@@ -164,7 +164,9 @@ main {
   box-sizing: border-box;
   border-collapse: separate;
 }
-
+.studylist-div-studycontents>img{
+	max-height : 200px;
+}
 textarea:focus {
   outline: none;
 
