--- a/src/main/webapp/asset/css/login/passwordSelect.css
+++ b/src/main/webapp/asset/css/login/passwordSelect.css
@@ -60,6 +60,18 @@ main{
   padding-left: 10px;
 } */
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance:none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance:textfield;
+}
+
 .passwordSelect-input{
   border-radius: 30px;
   height: 40px;
