EDIT : 20250328 박수현 관리자 최종 정리 완료

--- a/src/main/webapp/asset/css/admin/admin-boadcommentlist.css
+++ b/src/main/webapp/asset/css/admin/admin-boadcommentlist.css
@@ -52,3 +52,6 @@
 }
 
 .rotateBtn { transform: rotate(180deg) }
+
+/* 가로 스크롤 없애기 위해 가로 너비 계산 */
+div#ADMIN-DIV-CONTENTWRAP { width: calc(100% - 210px); }
