EDIT : 20250519 박수현 비밀번호 찾기> 변경 스타일 수정

--- a/src/main/webapp/asset/css/login/passwordSelect-detail.css
+++ b/src/main/webapp/asset/css/login/passwordSelect-detail.css
@@ -1,99 +1,81 @@
-*{
-  margin: 0;
-  padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
 
-
-
-
-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: whitesmoke;
-  height: 100vh;
+body {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: whitesmoke;
+	height: 100vh;
 }
 
-main{
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid lightgray;
-  padding: 50px 0;
-  border-radius: 30px;
-  width: 600px;
-  margin : 60px auto  ;
-  
-}
-.passwordSelect-detail-div-wrapper-h1-box{
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  /* border: 1px solid blue; */
-
-}
-.passwordSelect-detail-h1-title{
-  /* border: 1px solid black; */
-  justify-content: center;
-  align-items: center;
+main {
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	border: 1px solid lightgray;
+	padding: 50px 0;
+	border-radius: 30px;
+	width: 600px;
+	margin: 60px auto;
 }
 
-.passwordSelect-detail-div-wrapper-allinput-box{
-  margin-top: 20px;
-  /* border: 1px solid blue; */
-  width: 600px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
+.passwordSelect-detail-div-wrapper-h1-box {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+	/* border: 1px solid blue; */
 }
 
-  
-
-.passwordSelect-detail-div-wrapper-input-id
-
-{
-  margin: 0 auto;
-  border: 1px solid lightgray;
-  width: 300px;
-  display: flex;
-
-  border-radius: 30px;
-  margin-bottom: 20px;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 10px;
-  box-sizing: border-box;
-
+.passwordSelect-detail-h1-title {
+	/* border: 1px solid black; */
+	justify-content: center;
+	align-items: center;
 }
 
-
-
-
-
-
-.passwordSelect-detail-input-newpwd{
-
-  height: 20px;
-  line-height: 30px;
-  width: 150px;
-  border: none;
-  outline: none;
-  /* border: 1px solid black; */
-  margin-left: 60px;
-  margin-top: 5px;
-  border-radius: 20px;
-
+.passwordSelect-detail-div-wrapper-allinput-box {
+	margin-top: 20px;
+	/* border: 1px solid blue; */
+	width: 600px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
-.passwordSelect-detail-btn-complete{
-  
-  border-radius: 5px;
-  border: none;
-  background-color: #003161;
-  color: white;
-  height: 50px;
-  width: 50%;
-  margin-top: 20px;
+.passwordSelect-detail-div-wrapper-allinput-box div:first-child  { margin-top: 15px; }
+.passwordSelect-detail-div-wrapper-allinput-box div:nth-child(2) { margin-top: 20px; }
+.passwordSelect-detail-div-wrapper-allinput-box > span {
+	margin-top: 5px;
+	margin-bottom: 20px;
+}
+.passwordSelect-detail-div-wrapper-allinput-box > span:nth-child(3) { margin-top: 0px; }
+
+.passwordSelect-detail-div-wrapper-input-id {
+	display: flex; width : 300px;
+	height: 40px;
+	margin: 0 auto;
+	border: 1px solid lightgray;
+	border-radius: 30px;
+	width: 300px;
+}
+
+.passwordSelect-detail-input-newpwd {
+	width: 100%;
+	height: 40px;
+	padding: 0 20px;
+	border-radius: 30px;
+	border: none;
+}
+
+.passwordSelect-detail-btn-complete {
+	border-radius: 5px;
+	border: none;
+	background-color: #003161;
+	color: white;
+	height: 50px;
+	width: 50%;
+	margin-top: 5px;
 }
