--- a/src/main/webapp/asset/css/board/boardlistdetail.css
+++ b/src/main/webapp/asset/css/board/boardlistdetail.css
@@ -1,18 +1,24 @@
-
 * {
-  margin: 0;
-  padding: 0;
-
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 }
 
-body { background-color: #f6f6f6; }
+body {
+	background-color: #f6f6f6;
+}
 /* 최상단 제목  */
 .boardlistdetail-div-title {
-  font-size: 30px;
-  font-weight: 500;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 30px;
+	font-size: 30px;
+	font-weight: 500;
+	text-align: center;
+	margin-top: 50px;
+	margin-bottom: 30px;
+}
+
+main {
+	width: 80%;
+	margin: auto;
 }
 
 .main-footer-container {
@@ -20,315 +26,341 @@ body { background-color: #f6f6f6; }
 }
 
 /* 수정|삭제 버튼 */
+.top-btnwrapper {
+    width: 90%;
+    margin-bottom: 20px;
+}
+
 .boardlistdetail-detail-div-btnwrapper {
-  display: flex;
-  padding: 30px 0 20px;
-  color: #808080;
-  flex-direction: row-reverse;
+	display: flex;
+	margin-top: 10px; color : #808080;
+	flex-direction: row-reverse;
+	color: #808080;
 }
 
 .boardlistdetail-span-divider {
-  margin: 0 5px;
-  color: #808080;
+	margin: 0 5px;
+	color: #808080;
 }
 
-.boardlistdetail-span-editbtn,
-.boardlistdetail-span-commenteditbtn,
-.boardlistdetail-span-deletebtn,
-.boardlistdetail-span-commentdeletebtn {
-  cursor: pointer;
-  color: #ccc;
+.boardlistdetail-span-editbtn, .boardlistdetail-span-commenteditbtn,
+	.boardlistdetail-span-deletebtn, .boardlistdetail-span-commentdeletebtn
+	{
+	cursor: pointer;
+	color: #ccc;
 }
+
+.boardlistdetail-span-editbtn:hover, .boardlistdetail-span-commenteditbtn:hover,
+	.boardlistdetail-span-deletebtn:hover, .boardlistdetail-span-commentdeletebtn:hover { color: #000; }
 
 /* 자유게시판 상세피이지 글 닉네임 */
 .boardlistdetail-div-nickname {
-  display: flex;
-  border-top: 1px solid;
-  border-bottom: 1px solid #ccc;
-  height: 50px;
-  align-items: center;
+	display: flex;
+	border-top: 1px solid;
+	border-bottom: 1px solid #ccc;
+	height: 50px;
+	align-items: center;
 }
 
 /* 자유게시판 상세페이지 글 작성일 */
 .boardlistdetail-div-date {
-  display: flex;
-  height: 50px;
-  align-items: center;
+	display: flex;
+	height: 50px;
+	align-items: center;
 }
 
 .title-rightline {
-  width: 150px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  text-align: center;
+	width: 150px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	text-align: center;
 }
-.title-rightline div { width: 100%; }
-.boardlist-div-contents{
-  flex: 1;
-  padding: 15px 20px;
-  border-left: 1px solid #ccc;
+
+.title-rightline div {
+	width: 100%;
+}
+
+.boardlist-div-contents {
+	flex: 1;
+	padding: 15px 20px;
+	border-left: 1px solid #ccc;
 }
 
 /* 이미지 스타일 */
 .boardlist-div-contents img {
-  max-width: 100%;
-  margin-top: 30px;
+	max-width: 100%;
+	margin-top: 30px;
 }
 
 /* 자유게시판 상세페이지 글 내용 */
 .boardlistdetail-div-main {
-  display: flex;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  align-items: center;
+	display: flex;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	align-items: center;
 }
 
-.boardlistdetail-div-main > .boardlist-div-contents {
+.boardlistdetail-div-main>.boardlist-div-contents {
 	padding: 50px 20px;
-    min-height: 200px;
-
+	min-height: 200px;
 }
 
 .boardlistdetail-div-header {
-  border: 1px;
-  background-color: #fff;
+	border: 1px;
+	background-color: #fff;
 }
-
-main, .boardlistdetail-detail-div-btnwrapper {
-  width: 80%;
-  margin: auto;
-}
-
 
 /* 자유게시판 상세 등록버튼 */
-.boardlistdetail-btn-commentsubmit:hover{
-  cursor: pointer;
+.boardlistdetail-btn-commentsubmit:hover {
+	cursor: pointer;
 }
 
 .boardlistdetail-btn-commentsubmit:active {
-  background-color: #011a36;
+	background-color: #011a36;
 }
+
 .boardlistdetail-div-commentlistwrapper {
-  width: 100%;
-  margin-top: 30px;
+	width: 100%;
+	margin-top: 30px;
 }
 /* 자유게시판 상세 댓글확인  */
 .boardlistdetail-div-commenttitle {
-  background-color: #003161;
-  color: #fff;
+	background-color: #003161;
+	color: #fff;
 }
 
 .boardlistdetail-div-checkcomment {
-  border: 1px solid;
-  height: 80px;
-  padding : 0 20px;
+	border: 1px solid;
+	height: 80px;
+	padding: 0 20px;
 }
-.boardlistdtail-div-commentlayer{
-  display: flex;
-  justify-content: space-between;
+
+.boardlistdtail-div-commentlayer {
+	display: flex;
+	justify-content: space-between;
 }
-.boardlistdetail-div-editdelete{
-  display: flex;
-  justify-content: flex-end;
+
+.boardlistdetail-div-editdelete {
+	display: flex;
+	justify-content: flex-end;
 }
 
 /* 댓글 입력창을 감싸는 래퍼 */
 .boardlistdetail-div-commentinputwrapper {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border: 1px solid #333;
-  border-radius: 15px;
-  background-color: white;
-  box-sizing: border-box;
-  margin-top: 50px;
+	width: 100%;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	border: 1px solid #333;
+	border-radius: 15px;
+	background-color: white;
+	box-sizing: border-box;
+	margin-top: 50px;
 }
 
 /* 닉네임 */
 .boardlistdetail-div-userNickname {
-  font-size: 18px;
-  font-weight: bold;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .boardlistdetail-div-commentwrapper {
-  width: 100%;
-  margin-top: 20px;
+	width: 100%;
+	margin-top: 20px;
 }
 /*댓글 입력 칸*/
 #BOARDLISTDETAIL-TEXTAREA-COMMENT {
-  width: 100%;
-  height: 100px;
-  font-size: 18px;
-  border: none;
-  resize: none;
+	width: 100%;
+	height: 100px;
+	font-size: 18px;
+	border: none;
+	resize: none;
 }
 
 #BOARDLISTDETAIL-TEXTAREA-COMMENT::placeholder {
-  color: #808080;
+	color: #808080;
 }
 
 /* 댓글 글자수 표시 */
 .boardlistdetail-div-counterwrapper {
-  margin: 10px 0 10px 0;
-  align-self: flex-end;
+	margin: 10px 0 10px 0;
+	align-self: flex-end;
 }
 
 .boardlistdetail-span-counter {
-  color: #808080;
+	color: #808080;
 }
-.boardlistdetail-btn-commentsubmit{
-  margin-left: auto;
-  width: 100px;
-  height: 50px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  background-color: #003161;
-  color: #fff;
-  border: none;
-  border-radius: 100px;
+
+.boardlistdetail-btn-commentsubmit {
+	margin-left: auto;
+	width: 100px;
+	height: 50px;
+	margin-top: 30px;
+	margin-bottom: 20px;
+	background-color: #003161;
+	color: #fff;
+	border: none;
+	border-radius: 100px;
 }
-.boardlistdetail-div-commentwrap{
-  display: flex;
-  flex-direction: row-reverse;
+
+.boardlistdetail-div-commentwrap {
+	display: flex;
+	flex-direction: row-reverse;
 }
 /* 등록 버튼 호버시시 */
 .boardlistdetail-btn-commentsubmit:hover {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 /* 등록 버튼 눌렀을 때 */
 .boardlistdetail-btn-commentsubmit:active {
-  background-color: #011a36;
+	background-color: #011a36;
 }
 /* 댓글 리스트를 감싸는 div */
 .boardlistdetail-div-commentlistwrapper {
-  width: 100%;
-  margin-top: 30px;
+	width: 100%;
+	margin-top: 30px;
 }
 
 /* 댓글 리스트 헤더 */
-
 .boardlistdetail-div-commentlistheader {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  background-color: #003161;
-  padding: 20px;
-  box-sizing: border-box;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	background-color: #003161;
+	padding: 20px;
+	box-sizing: border-box;
 }
 
 /* 댓글 리스트 헤더 텍스트 */
-.boardlistdetail-span-comment,
-.boardlistdetail-span-commentcounter {
-  color: white;
-  font-size: 18px;
+.boardlistdetail-span-comment, .boardlistdetail-span-commentcounter {
+	color: white;
+	font-size: 18px;
+}
 
+/* 댓글이 없을 경우 */
+#BOARD-COMMENT-NONE {
+	height: 100px;
+	background: #fff;
+	text-align: center;
+	line-height: 100px;
 }
 
 /* 댓글칸 */
 .boardlistdetail-div-commentlist {
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: white;
-  border-bottom: 1px solid #ccc;
+	padding: 20px;
+	box-sizing: border-box;
+	background-color: white;
+	border-bottom: 1px solid #ccc;
 }
 
 /* 댓글 닉네임, 날짜를 감싸는 레이어 */
 .boardlistdetail-div-commentlayer {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 /* 닉네임 */
 .boardlistdetail-span-commentnickname {
-  font-size: 18px;
-  font-weight: bold;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 /* 댓글 날짜 */
 .boardlistdetail-span-commentdate {
-  font-size: 18px;
-  color: #808080;
+	font-size: 18px;
+	color: #808080;
+}
+
+.boardlistdetail-div-commentContentlayer {
+    display: flex;
+    width: 100%;
 }
 
 /* 댓글 내용 */
 .boardlistdetail-span-commentcontents {
-  margin-top: 10px;
-  color: #808080;
-  max-width: 90%;
+	margin-top: 10px;
+	flex: 1;
+    box-sizing: border-box; /* 패딩 포함 너비 계산 */
+	color: #808080;
+    margin-right: 10px;
+}
+
+.boardlistdetail-input-edit {
+    resize: none;
+	flex: 1;
+	box-sizing: border-box; /* 패딩 포함 너비 계산 */
+    width: 100%;
+    padding: 15px 20px;
+    
+    border: 1px solid #808080;
+    border-radius: 13px;
+    background-color: white;
 }
 
 /* 댓글 작성 부분을 감싸는 form */
 #BOARDLISTDETAIL-FORM-EDITCOMMENT {
-  width: 100%;
-  height: 90%;
-  padding: 10px 20px;
-  margin-top: 10px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+	width: 100%;
+	height: 90%;
+	padding: 10px 20px;
+	margin-top: 10px;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 /* 댓글 내용 수정할때 나오는 textarea */
 .boardlistdetail-textarea-commentcontents {
-  width: 100%;
-  height: 100px;
-  margin-top: 10px;
-  color: #808080;
-  border: none;
-  resize: none;
-
+	width: 100%;
+	height: 100px;
+	margin-top: 10px;
+	color: #808080;
+	border: none;
+	resize: none;
 }
 
 /* 댓글 수정 버튼 */
 .boardlistdetail-btn-editcommentsubmit {
-  align-self: flex-end;
+	align-self: flex-end;
 }
 /*페이지네이션*/
 .boardlistdetail-div-paginationwrapper {
-  width: 100%;
-  margin: 50px 0;
-
+	width: 100%;
+	margin: 50px 0;
 }
 
 #BOARDLISTDETAIL-UL-PAGINATION {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 50px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-top: 50px;
 }
 
 /*페이지네이션 리스트*/
 .boardlistdetail-li-paginationlist {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 100px;
-  margin: 0 5px;
-  cursor: pointer;
-  list-style-type: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	border-radius: 100px;
+	margin: 0 5px;
+	cursor: pointer;
+	list-style-type: none;
 }
 
 .currentpage {
-  background: #003161;
-  color: white;
+	background: #003161;
+	color: white;
 }
 
 .boardlistdetail-li-paginationlist:hover:not(.pre, .next) {
-
-  border: 3px solid #003161;
-  box-sizing: border-box;
-
+	border: 3px solid #003161;
+	box-sizing: border-box;
 }
-
-
-
