--- a/src/main/webapp/asset/css/study/studylist-detail.css
+++ b/src/main/webapp/asset/css/study/studylist-detail.css
@@ -36,6 +36,7 @@ main {
   align-items: center;
   align-self: flex-start;
   margin-top: 50px;
+  margin-bottom: 20px
 }
 
 /* 각 화면 최상단 제목 */
@@ -59,7 +60,6 @@ main {
 .studylist-detail-div-btnwrapper {
   display: flex;
   align-self: flex-end;
-  margin-top: 20px;
   color: #808080;
 }
 
@@ -329,10 +329,12 @@ textarea:focus {
 }
 
 /* 댓글 내용 */
-.studylist-span-commentcontents {
-  margin-top: 10px;
-  color: #808080;
-  max-width: 90%;
+.studylist-span-commentcontent {
+    margin-top: 10px;
+    flex: 1;
+    box-sizing: border-box;
+    /* color: #808080; */
+    margin-right: 10px;
 }
 
 /* 댓글 작성 부분을 감싸는 form */
@@ -464,6 +466,16 @@ textarea:focus {
   margin: 30px auto;
 }
 
+.comment-contents {
+    resize: none;
+    flex: 1;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 15px 20px;
+    border: 1px solid #808080;
+    border-radius: 13px;
+    background-color: white;
+}
 
 .studylist-div-bottomlayer{
   width: 90%;
@@ -482,8 +494,14 @@ textarea:focus {
 
 /* 버튼을 감싸는 div */
 .studylist-div-btnwrapper{
-  display: flex;
-  align-items: center;
+ /*  display: flex;
+  align-items: center; */
+  
+    display: flex;
+    margin-top: 10px;
+    color: #808080;
+    flex-direction: row-reverse;
+    color: #808080;
 }
 /* 체크박스를 감싸는 div */
 .studylist-div-checkboxwrapper{
